# moly-backend

./: .dockerignore  .env.example  .gitignore  APPEARANCE_BACKEND_HANDOFF.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
db/: apply.py  capi_diaries.csv  migration_chat_contexts.sql  migration_reward_ad_sessions.sql  migration_routines_days_of_week.sql  schema.sql  seed_and_triggers.sql  seed_moly_life_ments.sql  verify.py
docs/: API_SPEC.md  ARCHITECTURE.md  ERD.md
evals/: memory_recall_cases.json
openapi/: openapi.bundle.yaml  openapi.yaml
scripts/: backfill_morning_diary_20260718.py  backfill_nickname_placeholders.py  dev_token.py  evaluate_memory_recall.py  make_capi_diary_template.py  openapi_contract.py  seed_capi_diaries.py  verify_appearance_assets.py  verify_idempotency_responses.py
secrets/: README.md
tests/: test_account.py  test_account_settings.py  test_ads.py  test_app_config.py  test_appearance_assets.py  test_chat.py  test_chat_caching.py  test_chat_idempotency_lock.py  test_crud.py  test_diary.py  test_diary_generation.py  test_entitlement.py  test_error_handlers.py  test_feedback.py  test_greetings.py  test_health.py  test_i18n.py  test_idempotency_response_verifier.py  test_limits.py  test_llm_provider.py  test_memory.py  test_memory_ingestion.py  test_memory_recall_evaluator.py  test_model_eval.py  test_monitoring.py  test_naming.py  test_notify.py  test_openapi_contract.py  test_payment.py  test_push.py  test_response_models.py  test_routine_notify.py  test_security.py  test_slack_notify.py  (+4 more)
worker/: tick.py  (+1 more)
(+126 files in other folders)
