[project]
name = "moly-backend"
version = "0.1.0"
description = "몰리 앱 백엔드 — FastAPI 모듈러 모놀리스 + 배치 워커"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "httpx>=0.28.0",
    "pyjwt[crypto]>=2.10.0",
    "anthropic>=0.112.0",
    "mem0ai>=2.0.7",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.30",
    "google-auth>=2.0",
    "app-store-server-library>=3.1.2",
    "vecs>=0.4.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

# 애플리케이션(배포 단위)이라 프로젝트 자체는 빌드/설치하지 않음 — 의존성만 동기.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
